<resources>
    <string name="app_name">The Movie DB</string>
    <string name="title_trend">Trending Now</string>
    <string name="title_home">Movie</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_tv">TV Series</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>

    <string name="github_page">https://github.com/crackspace770/MovieDB/tree/master</string>

    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="release">01–01–2011</string>
    <string name="genre">Genre</string>
    <string name="genre_info">Genre Info</string>
    <string name="rating">Rating</string>
    <string name="rating_info">Rating Info</string>
    <string name="runtime">Runtime</string>
    <string name="runtime_info">Runtime Info</string>
    <string name="vote">Vote</string>
    <string name="vote_info">Vote Info</string>
    <string name="popularity">Popularity</string>
    <string name="popularity_info">Popularity Info</string>
    <string name="info">Info</string>
    <string name="category">Category: %s</string>
    <string name="episodeRuntime">%dmin</string>
    <string name="no_genre_data">-No Genre Data-</string>

    <string name="image_placeholder">Image</string>
    <string name="search_movie">Search Movie</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops something went wrong</string>

    <string name="random">Random</string>
    <string name="popular">Popular</string>
    <string name="latest_release">Latest Release</string>
    <string name="oldest_release">Oldest Release</string>
    <string name="best_vote">Best Vote</string>
    <string name="worst_vote">Worst Vote</string>
    <string name="upcoming_movies">Upcoming Movies</string>

    <string name="home">Home</string>
    <string name="trending_this_week">Trending this Week</string>
    <string name="search">Search</string>
    <string name="try_again">Try Again</string>
    <string name="action_filter">filter</string>

    <string name="search_empty_result_illustration">Search Empty Result Illustration</string>
    <string name="movie_are_you_looking">What movie are you looking for?</string>
    <string name="search_your_favorite_movie">You can search your favorite movies or find similar results.</string>

    <string name="nothing_add">You Haven\'t add anything yet</string>
    <string name="tap_love">Tap on love action button to add your favorite film</string>


    <string name="poster">poster</string>
    <string name="poster_film">poster_film</string>
    <string name="title_favorites">Favorite</string>
    <string name="date_released">01–01-2011</string>


</resources>