<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_trend" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_movie_menu"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_tv_icon"
        android:title="@string/title_tv" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/title_search" />


    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_selected"
        android:title="@string/title_favorite" />



</menu>