<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.fajar.moviedb.ui.main.MainFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fajar.moviedb.ui.movie.MovieFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_movie" >
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.fajar.moviedb.ui.tv.TvFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_tv" >
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.fajar.moviedb.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.fajar.moviedb.setting.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>



    <activity
        android:id="@+id/detailActivity"
        android:name="com.fajar.moviedb.ui.detail.DetailActivity"
        android:label="@string/title_activity_detail_home"
        tools:layout="@layout/activity_details"
        />


</navigation>