<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".ui.detail.DetailActivity">

    <!-- Top bar -->
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        android:elevation="4dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Favorite button -->
            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="36dp"
                android:layout_height="39dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/ic_favorite_unselected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="favorite_button" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/ic_share"
                app:layout_constraintEnd_toStartOf="@+id/favorite_button"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="share_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <ImageView
        android:id="@+id/ivDetailImage"
        android:layout_width="415dp"
        android:layout_height="215dp"
        android:contentDescription="@string/poster"
        android:src="@drawable/pixel_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="80dp">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/CardView"
            style="@style/custom_card_view_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                style="@style/custom_card_view_style"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:orientation="vertical"
                android:padding="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="200dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="267dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tvRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/date_released"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="336dp"
                    android:layout_height="142dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/description"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRelease" />

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/genre" />

                        <TextView
                            android:id="@+id/tvGenre"
                            style="@style/TextSpec.Value"
                            android:text="@string/genre_info" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/rating" />

                        <TextView
                            android:id="@+id/tvRating"
                            style="@style/TextSpec.Value"
                            android:text="@string/rating_info" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/runtime" />

                        <TextView
                            android:id="@+id/tvRuntime"
                            style="@style/TextSpec.Value"
                            android:text="@string/runtime_info" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/popularity" />

                        <TextView
                            android:id="@+id/tvPopularity"
                            style="@style/TextSpec.Value"
                            android:text="@string/popularity_info" />
                    </TableRow>


                </TableLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>


        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/view_error"
            layout="@layout/view_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>